<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/tellUsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="257dp"
        android:layout_marginBottom="40dp"
        android:text="@string/TellUs"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howFeeling" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="316dp"
        android:text="@string/nameLabel"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ageLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="42dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="338dp"
        android:layout_marginBottom="611dp"
        android:text="@string/ageLabel"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/feelingLabel"
        android:layout_width="125dp"
        android:layout_height="37dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="38dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/tellUsButton" />

    <TextView
        android:id="@+id/howFeeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/howFeeling2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageLabel" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ageText"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/age_Hint"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/mainFace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ageLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <ImageView
        android:id="@+id/mainFace"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/feelingLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toEndOf="@+id/howFeeling"
        app:srcCompat="@android:drawable/divider_horizontal_dark" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="353dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="385dp"
        android:text="@string/submit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>