<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select_mood">

    <ImageView
        android:id="@+id/face"
        android:layout_width="197dp"
        android:layout_height="219dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="107dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feelingBar"
        app:srcCompat="@drawable/ok" />

    <TextView
        android:id="@+id/howFeeling2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="95dp"
        android:text="@string/howFeeling"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/feelingBar"
        android:layout_width="372dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="21dp"
        android:max="4"
        android:progress="2"
        app:layout_constraintBottom_toTopOf="@+id/face"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howFeeling2" />

    <TextView
        android:id="@+id/feelingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="338dp"
        android:text="@string/two"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/face" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="247dp"
        android:text="@string/cancel"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/submitButton2"
        app:layout_constraintTop_toBottomOf="@+id/face" />

    <Button
        android:id="@+id/submitButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="247dp"
        android:text="@string/submit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/face" />

</androidx.constraintlayout.widget.ConstraintLayout>